优化视频上传